# neax-platform

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/management/commands/: seed_demographics.py  seed_infra.py  seed_resources.py  seed_social_use.py  seed_states.py
backend/core/migrations/: 0001_initial.py  0002_alter_statedata_options.py  0003_remove_statedata_electrification_rate_and_more.py  0004_socialusedata.py  0005_resourcedata.py  0006_infrastructuredata.py  0007_alter_infrastructuredata_state_and_more.py  0008_alter_infrastructuredata_state.py
backend/core/templates/core/: base.html  home.html
backend/data/: demographics.json  infra.json  resources.json  social_use.json  states.json
data-pipeline/: main.py  pyproject.toml
data-pipeline/config/: scoring.ngo.json  scoring.v1.json
data-pipeline/data/: lga_input_real.csv  sample_lga_input.csv
data-pipeline/data/raw/: grid3_worldpop_sources.manifest.json
data-pipeline/src/: build_first_artifact.py  ingest_powerline_proximity_lga_source.py  ingest_public_lga_source.py  normalize_public_lga_indicator_csv.py  prepare_lga_input.py  run_lga_scoring_pipeline.py  run_pipeline.py  score_lga_input.py
data-pipeline/tests/: test_build_first_artifact.py  test_demand_score.py  test_ingest_public_lga_source.py  test_normalize_public_lga_indicator_csv.py  test_prepare_lga_input.py  test_run_pipeline.py  test_score_lga_input.py
docs/: HANDOVER.md  runbook-core-lga-pipeline.md
(+48 files in other folders)
