[project]
name = "neax-data-pipeline"
version = "0.1.0"
description = "The data pipeline serving the NEAX Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pyogrio>=0.12.1",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
cache_dir = ".pytest_cache_local"

